Add Bounding Box Index Query
The range query currently doubles for actual ranges, and bounding boxes
for spacial types. Here we separate their functionalities by adding a
new query type, specific for handling bounding box queries.

Once bounding box has been separated completely from range, including at
the Cypher levels for planning/runtime, and with the new comparison
semantics; then fromInclusive/toInclusive can be removed, code further
simplified, and tests removed.

In the new semantics, a bounding box is always fully inclusive.